k8s/monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  namespace: microservices-messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
        - name: monitor
          image: monitor-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: monitor
  namespace: microservices-messaging
spec:
  selector:
    app: monitor
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
