k8s/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: microservices-messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: producer-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: microservices-messaging
spec:
  selector:
    app: producer
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
