k8s/rabbitmq-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-headless
  namespace: microservices-messaging
spec:
  clusterIP: None
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit
  namespace: microservices-messaging
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  type: ClusterIP
